# puzzle_ortools

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: AbcPlace.ipynb  BlockPuzzle.ipynb  BomberPuzzle.ipynb  Building.ipynb  Chokona.ipynb  CountryRoad.ipynb  Creek.ipynb  Eisbahn.ipynb  Fillmat.ipynb  Fillomino.ipynb  Fukumenzan.ipynb  HakyuKoka.ipynb  HashiWoKakero.ipynb  Heyawake.ipynb  HitoriNiShitekure.ipynb  HotaruBeam.ipynb  Inequality.ipynb  InshiNoHeya.ipynb  Kakuro.ipynb  Kanaore.ipynb  Kurodoko.ipynb  Mashu.ipynb  MiniSudoku.ipynb  Museum.ipynb  Nonogram.ipynb  NoriNori.ipynb  NumberLink.ipynb  NumberSkeleton.ipynb  Nurikabe.ipynb  OhNo.ipynb  PaintArea.ipynb  PipeLink.ipynb  Satogaeri.ipynb  ShakaShaka.ipynb  ShikakuNiKire.ipynb  Skeleton.ipynb  SlitherLink.ipynb  SnakePuzzle.ipynb  StainedGlass.ipynb  StarBattle.ipynb  (+8 more)
