[project]
dependencies = [
  "amplpy>=0.16.1",
  "jupyter>=1.1.1",
  "mip[highs,numpy]>=1.17.6",
  "ortoolpy>=0.9.0",
  "pulp>=3.3.2",
]
description = "Puzzles Solved Using Mathematical Optimization"
name = "tsutomu-puzzle-ortools"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.taskipy.tasks]
jupyter = "uv run jupyter lab -y notebooks"
